# EmployeeAbsenceReport

./: .clang-format  .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
application/test_data/: input.csv  output.csv
business_logic/: CMakeLists.txt
business_logic/include/: AbsenceCalculator.h  ICalculationStrategy.h  IStrategyFactory.h  SeniorCalculationStrategy.h  StandardCalculationStrategy.h  StrategyFactory.h
data/: CMakeLists.txt
data/include/: Absence.h  AbsenceSelector.h  DataFactory.h  Employee.h  EmployeeSelector.h  IData.h  IDataCreator.h  IDataSelector.h  IOutput.h  Output.h
data/src/: Absence.cpp  AbsenceSelector.cpp  Employee.cpp  EmployeeSelector.cpp  Output.cpp
loaders/: CMakeLists.txt
loaders/include/: CSVDataLoader.h  IDataLoader.h
report/: CMakeLists.txt
report/include/: BasicReportGenerator.h  CSVReportGenerator.h  ConsoleReportGenerator.h  IReportGenerator.h
report/src/: BasicReportGenerator.cpp  CSVReportGenerator.cpp  ConsoleReportGenerator.cpp
tests/: CMakeLists.txt
tests/business_logic/: AbsenceCalculatorTest.cpp
tests/data/: DataFactoryTest.cpp
tests/mocks/: MockCalculationStrategy.h  MockDataCreator.h  MockDataSelector.h  MockEmployee.h  MockStrategyFactory.h
